tests/real-pat/out.txt
error: real constant used as a pattern
  ┌─ err.sml:3:5
  │
3 │     1.2 => 1
  │     ^^^

parsing failed
